# ln7

./: README  README.md  configure.ac  packageln.scm  packageln.scm~
css/: common.css
docker/: Dockerfile  Dockerfile_old_compile_guile.txt  dockerfile_used_initially_with_java?.txt
elephantsql/: elephant-sql-cron-directions.txt  example-data-for-elephant-sql.sql
lnserver/: #artanis-test.scm#  #test.scm#  .#artanis-test.scm  .#test.scm  .route  2  ENTRY  README  artanis-test.scm  artanis-test.scm~  environment.scm  limsnucleus.properties  manifest.scm  startanis.sh  test.scm
lnserver/conf/: artanis.conf
lnserver/css/: common.css
lnserver/postgres/: #create-db.sql#  .#create-db.sql  create-db.sql  create-db.sql~  drop-func-tables.sql  initdb.sql  ln7-specific.sql  readme.txt
lnserver/pub/: datatables.css  datatables.js  datatables.min.css  datatables.min.js  footer.tpl  header (copy).tpl  header.tpl  header.tpl~  loginheader.tpl  loginheader.tpl~
lnserver/rscripts/: plot-assayrun.R  plot-review-layout.R
lnserver/software/: index.html
lnserver/sys/: extra.scm  extra.scm~
lnserver/tmp/: ar-275415031772945296016.txt  ar-8222479441190188284525.txt  ar2-2144413955821242018230.txt  ar2-555030039086599021315.txt  ar2-7764507602467792171973.txt  hl-4956482.txt  lyt-1578468127069140845127.txt  lyt-2068620638465487303630.txt  (+10 more)
postgres/: create-db.sql  drop-func-tables.sql~  example-data.sql~  initdb.sql  test.sql
ppt/: .~lock.lnwbootstrap.odp#  lims-nucleus-abstract.odt  lnwbootstrap.odp  overview.odp  plate-manager.odp  plate-manager2.odp
(+891 files in other folders)
